--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -15,51 +15,51 @@
     }
 }
 
-@for $i from 1 through 12 {
-    .person-#{$i} {
-       grid-column: 1;
-       grid-row: #{$i};
-   }
+// @for $i from 1 through 12 {
+//     .person-#{$i} {
+//        grid-column: 1;
+//        grid-row: #{$i};
+//    }
 
-}
+// }
 
-@include mq($brk-m) {
-    @for $i from 1 through 6 {
-        .person-#{$i} {
-            grid-column: 1;
-            grid-row: #{$i};
-        }
-    }
+// @include mq($brk-m) {
+//     @for $i from 1 through 6 {
+//         .person-#{$i} {
+//             grid-column: 1;
+//             grid-row: #{$i};
+//         }
+//     }
 
-    @for $i from 7 through 12 {
-        .person-#{$i} {
-            grid-column: 2;
-            grid-row: #{$i - 6};
-        }
-    }
-}
+//     @for $i from 7 through 12 {
+//         .person-#{$i} {
+//             grid-column: 2;
+//             grid-row: #{$i - 6};
+//         }
+//     }
+// }
 
-@include mq($brk-l) {
-    @for $i from 1 through 4 {
-        .person-#{$i} {
-            grid-column: 1;
-            grid-row: #{$i};
-        }
-    }
+// @include mq($brk-l) {
+//     @for $i from 1 through 4 {
+//         .person-#{$i} {
+//             grid-column: 1;
+//             grid-row: #{$i};
+//         }
+//     }
 
-    @for $i from 5 through 8 {
-        .person-#{$i} {
-            grid-column: 2;
-            grid-row: #{$i - 4};
-        }
-    }
+//     @for $i from 5 through 8 {
+//         .person-#{$i} {
+//             grid-column: 2;
+//             grid-row: #{$i - 4};
+//         }
+//     }
 
-    @for $i from 9 through 12 {
-         .person-#{$i} {
-            grid-column: 3;
-            grid-row: #{$i - 8};
-        }
-    }
-}
+//     @for $i from 9 through 12 {
+//          .person-#{$i} {
+//             grid-column: 3;
+//             grid-row: #{$i - 8};
+//         }
+//     }
+// }
 
 
